--- a/app/modules/login/login.html
+++ b/app/modules/login/login.html
@@ -2,7 +2,9 @@
        name="form_login"
       ng-submit="form_login.$valid?vm.login(vm.user):vm.form_login.submit=true">
   <div id="loading-bar-container"></div>
-    <div class="logon--location">InfoArchives</div>
+    <div class="logon--location">
+        <img class="logon--location__logo" src="images/logo.png" alt=""/>
+    </div>
   <div class="input-content-wrapper">
     <div class="caption">登录</div>
     <div class="input-content--box">
