--- a/app/modules/main/infoArchives.html
+++ b/app/modules/main/infoArchives.html
@@ -7,7 +7,9 @@
                 md-whiteframe="4">
 
         <md-toolbar class="md-theme-indigo header">
-            <h1 class="md-toolbar-tools">InfoArchives</h1>
+            <div class="md-toolbar-tools">
+                <img class="header_logo" src="images/logo.png" alt=""/>
+            </div>
         </md-toolbar>
         <div class="info--archive--sidebar--content">
             <!--<div class="md-toolbar-tools header&#45;&#45;bottom&#45;&#45;version"> Version 1.0 Bild 10032</div>-->
