--- a/app/modules/projectManage/projectEdit/basicData/basicData.html
+++ b/app/modules/projectManage/projectEdit/basicData/basicData.html
@@ -1,11 +1,11 @@
-<div class="anim-slide-left " >
+<div class="anim-slide-left" >
     <md-toolbar class="md-menu-toolbar edit--project--manage--head-box">
         <div class="md-toolbar-tools">
             <md-button class="md-icon-button edit--project--manage--head--btn" ng-click="vm.cancel()">
                 <a ui-sref="infoArchives.projectManage" class="fa fa-angle-left"></a>
             </md-button>
             <a  ui-sref="infoArchives.projectManage" class="project--manage--head">项目管理</a>
-            <span> > </span>
+            <span class="fa fa-angle-right"></span>
             <span class="current--column">{{vm.entity.projectName}}</span>
             <span> | </span>
             <span class="current--column">项目基本信息</span>
