--- a/app/modules/dataBase/dataBase.html
+++ b/app/modules/dataBase/dataBase.html
@@ -3,6 +3,11 @@
         <div class="title">数据视图</div>
         <div class="prompt--content">可以使用数据过滤浏览具体业务记录</div>
        <div class="data--base--view--type--filter">
+           <span class="data--base--view--type--filter_title">单位数量：</span>
+           <input type="text" ng-model="vm.unitNums">
+           <span class="data--base--view--type--filter_title">每个单位下的事项数量：</span>
+           <input type="text" ng-model="vm.shixiangNums">
+           <button ng-click="vm.getData()">模拟数据</button>
            <span class="data--base--view--type--filter_title">视图类型：</span>
            <md-radio-group class="radio--box" ng-model="vm.parameter.chartType" ng-change="vm.changeChartType(vm.parameter.chartType)">
                <md-radio-button value="unit" class="md-primary">按业务单位</md-radio-button>
@@ -10,39 +15,39 @@
            </md-radio-group>
        </div>
    </div>
-    <div style="float:left; width: 400px;height: 100%;">
-        <div style="float: left;width:300px;height: 360px;background: gray;margin-left: 50px;margin-top: 50px">
-            <span>数据信息</span>
-            <div>
-                <label >  最新更新日期 </label>
-                <span> 2017/09/23 16:34:23 </span>
+    <div class="data--base--filter--condition--wrap">
+        <div class="data--info--box">
+            <div class="data--info--box_head">数据信息</div>
+            <div class="attr--row--box">
+                <label class="title">  最新更新日期 </label>
+                <span class="value"> 2017/09/23 16:34:23 </span>
             </div>
-            <div>
-                <label >对接系统数量</label>
-                <span>5</span>
+            <div class="attr--row--box">
+                <label class="title">对接系统数量</label>
+                <span class="value">5</span>
             </div>
-            <div>
-                <label >数据机构数量</label>
-                <span>119</span>
+            <div class="attr--row--box">
+                <label class="title">数据机构数量</label>
+                <span class="value">119</span>
             </div>
-            <div>
-                <label >业务数量</label>
-                <span>632</span>
+            <div class="attr--row--box">
+                <label class="title">业务数量</label>
+                <span class="value">632</span>
             </div>
-            <div>
-                <label >数据记录总量</label>
-                <span>2341412</span>
+            <div class="attr--row--box">
+                <label class="title">数据记录总量</label>
+                <span class="value">2341412</span>
             </div>
-            <div>
-                <label >数据总量</label>
-                <span>41512GB</span>
+            <div class="attr--row--box">
+                <label class="title">数据总量</label>
+                <span class="value">41512GB</span>
             </div>
         </div>
-        <div style="float: left;width: 300px;height: 360px;background: gray;margin-left: 50px;margin-top: 50px">
-            <span>数据过滤</span>
-            <div>
-                <label >  数据源 </label>
-                <div>
+        <div class="data--info--box">
+            <div class="data--info--box_head">数据过滤</div>
+            <div class="select--attr--box">
+                <label class="title">  数据源 </label>
+                <div class="select--value">
                     <md-select ng-model="vm.parameter.dataSource"
                     >
                         <md-option ng-value="12345" >行政审批系统</md-option>
@@ -50,9 +55,9 @@
                     </md-select>
                 </div>
             </div>
-            <div>
-                <label >  业务事项 </label>
-                <div>
+            <div class="select--attr--box">
+                <label class="title">  业务事项 </label>
+                <div class="select--value">
                     <md-select ng-model="vm.parameter.dataSource"
                     >
                         <md-option ng-value="'企业项目投资核准'" >企业项目投资核准</md-option>
@@ -60,22 +65,21 @@
                     </md-select>
                 </div>
             </div>
-            <div>
-                <md-button class="pull-right green--btn" ng-click="vm.search()">过滤</md-button>
+            <div class="filter--btn--box">
+                <md-button class="green--btn" ng-click="vm.search()">过滤</md-button>
             </div>
         </div>
     </div>
-    <div style="float: left;width: calc(100% - 400px);height: 100%;">
-        <tree-chart nodes="data" ng-if="vm.parameter.chartType=='unit'">
-        </tree-chart>
-        <div ng-if="vm.parameter.chartType=='source'">
-            <tree-for-angular   id="customModule" nodes = 'data' width = '200' height = '200' radius = '490'>
+    <div style="float: left;width: calc(100% - 300px);height: calc(100% - 111px);overflow:auto">
+        <circle-tree nodes="data" ng-if="vm.parameter.chartType=='unit'">
+        </circle-tree>
+        <straight-tree ng-if="vm.parameter.chartType=='source'"  id="customModule" nodes = 'data'  radius = '490'>
+        </straight-tree>
 
-            </tree-for-angular>
-        </div>
-        <md-sidenav id="tree-data-node-detail" class="md-sidenav-right right--sidebar--info--wrap" md-component-id="tree-data-node-detail" md-whiteframe="4">
-            <div ng-include="'./modules/dataBase/template/sideBar/sideBar.html'"></div>
-        </md-sidenav>
+
     </div>
+    <md-sidenav id="tree-data-node-detail" md-disable-backdrop class="md-sidenav-right data--base--right--sidebar--info--wrap" md-component-id="tree-data-node-detail" md-whiteframe="4">
+        <div ng-include="'./modules/dataBase/template/sideBar/sideBar.html'"></div>
+    </md-sidenav>
 
 </div>
