--- a/app/modules/projectManage/projectManage.html
+++ b/app/modules/projectManage/projectManage.html
@@ -3,8 +3,8 @@
         <md-list >
             <md-list-item class="md-2-line new--project--btn--box" >
                 <div class="md-list-item-text">
-                    <h3>项目管理</h3>
-                    <p>建立项目针对每个归档系统建立归档策略和业务模版</p>
+                    <h3 class="title">项目管理</h3>
+                    <p class="prompt-content">建立项目针对每个归档系统建立归档策略和业务模版</p>
                 </div>
                 <md-button ng-click="vm.newProject($event)" class="red--btn new--project--btn">
                     <span class="glyphicon glyphicon-plus"></span>
@@ -28,7 +28,7 @@
                     <md-card-title class="card--title--box">
                         <md-card-title-text >
                             <span class="md-headline">{{item.projectName}}</span>
-                            <span class="md-subhead">{{item.createDate  | date:'yyyy年MM月dd日'}}</span>
+                            <span class="md-subhead">{{item.createDate  | date:'yyyy年MM月dd日'}}创建</span>
                         </md-card-title-text>
                         <md-card-title-media>
                             <div class="md-media-xl card-media"></div>
