--- a/app/modules/main/infoArchives.html
+++ b/app/modules/main/infoArchives.html
@@ -96,7 +96,7 @@
                 </md-menu-bar>
             </div>
         </div>
-        <div ui-view class="anim-in-out data--base--sidenav--box" data-anim-sync="true" ></div>
+        <div ui-view class="anim-in-out clearfix data--base--sidenav--box" data-anim-sync="true" ></div>
     </div>
 
 
