--- a/app/modules/projectManage/projectEdit/basicData/basicData.html
+++ b/app/modules/projectManage/projectEdit/basicData/basicData.html
@@ -33,7 +33,7 @@
                                     <span class="attribute--row--box__title">项目名称</span>
                                     <div class="popover-wrapper attribute--row--box__value">
                                         <input ng-model="vm.entity.projectName"
-                                               class="form-control "
+                                               class="form-control  attribute--row--box__value-input"
                                                name="projectName"
                                                required
                                                hs-form-message
