--- a/app/index.html
+++ b/app/index.html
@@ -64,16 +64,14 @@
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/angular-ui-grid/ui-grid.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
 
     <script src="bower_components/d3/d3.min.js"></script>
     <script src="bower_components/angular-ui-router-anim-in-out/anim-in-out.js"></script>
     <script src="bower_components/angular-ui-select/dist/select.min.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
-    <script src="bower_components/angular-xeditable/dist/js/xeditable.min.js"></script>
-    <script src="bower_components/angular-websocket/dist/angular-websocket.js"></script>
     <script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
     <script src="custom_components/angular-uuid/angular-uuid.js"></script>
-    <script src="custom_components/d3-architecutreTree/d3.architectureTree.js"></script>
 
 
 
@@ -125,6 +123,7 @@
     <script src="modules/projectManage/projectEdit/ruleSet/ruleSet.service.js"></script>
     <script src="modules/projectManage/projectEdit/dataModule/dataModule.controller.js"></script>
     <script src="modules/projectManage/projectEdit/dataModule/dataModule.service.js"></script>
+    <script src="modules/projectManage/projectEdit/moduleTemplate/moduleTemplate.controller.js"></script>
 
     <script src="modules/userManage/userManage.controller.js"></script>
     <script src="modules/userManage/userManage.service.js"></script>
